Implemented a SLURM-ready API design
